Address review feedback on multi-tier getExistingAssignment override
* Drop uploaded-segment tracking from the override — only committed LLC
  segments matter for picking the latest segment per partition.
* Return null (and log a warning) when the latest segment's ZK metadata is
  unavailable, in addition to the existing tier-based skip; the prior tier
  case is also raised from info to warn so both branches are observable.
* Test nit: replace Collections.emptySet() with Set.of() in the helix-manager
  factory helper.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>